--- a/index.html
+++ b/index.html
@@ -5,6 +5,15 @@
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vite + React</title>
+    <!-- No Index --> <meta name="robots" content="noindex"> <!-- No Index -->
+
+    <!-- Start Setting Open Graph -->
+    <meta property="og:title" content="Jhon Doe - Resume 2023">
+    <meta property="og:type" content="website">
+    <meta property="og:image" content="https://example.com/images/thumbnail.jpg">
+    <meta property="og:description" content="Hello! My name is Jhon Doe, i'm a Digital Marketing also Web Designer. This is a blog about my-self and my journey">
+    <!-- End Setting Open Graph -->
+    <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
   </head>
   <body>
     <div id="root"></div>
