--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React</title>
+    <title>Jhon Doe | Resume 2023</title>
     <!-- No Index --> <meta name="robots" content="noindex"> <!-- No Index -->
 
     <!-- Start Setting Open Graph -->
